diskann-quantization/tests/compile-fail/multi/matmut_get_row_mut.stderr
error[E0499]: cannot borrow `view` as mutable more than once at a time
  --> tests/compile-fail/multi/matmut_get_row_mut.rs:15:13
   |
13 |     let row = view.get_row_mut(0).unwrap();
   |               ---- first mutable borrow occurs here
14 |     // This should fail: we cannot use `view` while `row` is still borrowed
15 |     let _ = view.get_row_mut(1).unwrap();
   |             ^^^^ second mutable borrow occurs here
16 |     row[0] = 1.0;
   |     ------ first borrow later used here
